tests/paczka2/big_fuzzy/35794396.err
Error in line 2: 5grbZwBGE0 A939 33,5
Error in line 5: 5grbZwBGE0 S112 100,0
Error in line 13: qoPnTNZ210 S733 95,7
Error in line 15: qoPnTNZ210 S112 28,2
Error in line 16: qoPnTNZ210 S541 35,9
Error in line 23: 5grbZwBGE0 S112 85,9
Error in line 24: 5grbZwBGE0 A939 64,5
Error in line 53: 5grbZwBGE0 S112 67,0
Error in line 62: S733 S541 33,5
Error in line 85: Twra944MAtI S541 72,9
Error in line 88: !oPnTNZ210 A939 390,2
Error in line 79: 5grbZwBGE0 S733 29,1
Error in line 92: 5grbZwBGE0 A939 70,5
Error in line 97: 5grbZwBGE0 S541 32,4
Error in line 101: daNr0bEwaw S733 37,3
Error in line 98: Twra944MAtI S541 36,0
Error in line 118: daNr0bEwaw S733 12,3
Error in line 120: daNr0bEwaw S112 4,6
Error in line 122: daNr0bEwaw S733 2,0
Error in line 121: Twra944MAtI S541 810,0
Error in line 133: 7xh A939 8,1
Error in line 139: 2LKG9F2 S112 71,5
Error in line 146: 7xh S733 75,7
Error in line 141: 2LKG9F2 S541 91,1
Error in line 154: 2LKG9F2 A939 88,0
Error in line 162: 2LKG9F2 S541 46,7
Error in line 167: qoPnTNZ210 S733 43,1
Error in line 156: 7xh S112 17,3
Error in line 181: 7xh S733 87,4
Error in line 195: qoPnTNZ210 A939 77,4
Error in line 200: S733 S112 73,3
Error in line 196: 2LKG9F2 S733 10,3
Error in line 201: qoPnTNZ210 S733 79,4
Error in line 228: Twra944MAtI S733 21,77
Error in line 230: 2LKG9F2 A939 72,4
Error in line 238: daNr0bEwaw S112 35,2
Error in line 244: qoPnTNZ210 S112 78,75
Error in line 237: Twra944MAtI S733 9,1
